--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>mod-2-assignment</title>
+  <style>
+      h1{text-align: center;}
+#ck{position: relative;background-color: blue;box-sizing: border-box;width: 300px;top: 65px;left: 65px;}
+#chicken{background-color: red;box-sizing: border-box;width: 150px;color: blue;float: right;}
+#bk{position: relative;background-color: blue;box-sizing: border-box;width: 300px;bottom:40px;left: 400px;}
+#dk{position: relative;background-color: blue;box-sizing: border-box;width: 300px;bottom:170px;left: 750px;}
 
+@media(min-width:992px;);{
+
+    #ck{width: 3oopx;}
+    #bk{width: 3oopx;}
+    #dk{width: 3oopx;}
+}
+@media(min-width:768px and max-width: 991px;)
+{
+    #ck{width: 17opx;}
+    #bk{width: 17opx;}
+    #dk{width: 17opx;}
+}
+  </style>
+</head>
+<body>
+    <h1>Our Menu</h1>
+<section id="ck">
+    <section id="chicken">
+        <p>Chicken</p>
+    </section>
+    <p>The chicken is a type of domesticated fowl, a subspecies of the red junglefowl. Chickens are one of the most common and widespread domestic animals,</p>
+</section>
+<section id="bk">
+<section id="chicken">
+    <p>Beef</p>
+</section>
+<p>Beef is the culinary name for meat from cattle, particularly skeletal muscle. Humans have been eating beef since prehistoric times.</p>
+</section>
+<section id="dk">
+<section id="chicken">
+    <p>Sushi</p>
+</section>
+<p>Sushi is a Japanese dish of prepared vinegared rice, usually with some sugar and salt, accompanying a variety of ingredients, such as seafood, often raw, vegetables, and occasionally tropical fruits.</p>
+</section>
+    
+</body>
+</html>
