--- a/index.html
+++ b/index.html
@@ -4,26 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mod-2-assignment</title>
-  <style>
-      h1{text-align: center;}
-#ck{position: relative;background-color: blue;box-sizing: border-box;width: 300px;top: 65px;left: 65px;}
-#chicken{background-color: red;box-sizing: border-box;width: 150px;color: blue;float: right;}
-#bk{position: relative;background-color: blue;box-sizing: border-box;width: 300px;bottom:40px;left: 400px;}
-#dk{position: relative;background-color: blue;box-sizing: border-box;width: 300px;bottom:170px;left: 750px;}
-
-@media(min-width:992px;);{
-
-    #ck{width: 3oopx;}
-    #bk{width: 3oopx;}
-    #dk{width: 3oopx;}
-}
-@media(min-width:768px and max-width: 991px;)
-{
-    #ck{width: 17opx;}
-    #bk{width: 17opx;}
-    #dk{width: 17opx;}
-}
-  </style>
+    <link rel=index.css>
 </head>
 <body>
     <h1>Our Menu</h1>
