--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mod-2-assignment</title>
-    <link rel="stylesheet" href=index.css>
+    <link rel="stylesheet" href=https://github.com/Farhan-labib/courseera-course/blob/master/index.css>
 </head>
 <body>
     <h1>Our Menu</h1>
