--- a/index.html
+++ b/index.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mod-2-assignment</title>
-    <link rel="stylesheet" href=https://github.com/Farhan-labib/courseera-course/blob/master/index.css>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>M @ 2</title>
+	<link rel="stylesheet" type="text/css" href="styles 2.css">
 </head>
-<body>
-    <h1>Our Menu</h1>
-<section id="ck">
-    <section id="chicken">
-        <p>Chicken</p>
-    </section>
-    <p>The chicken is a type of domesticated fowl, a subspecies of the red junglefowl. Chickens are one of the most common and widespread domestic animals,</p>
-</section>
-<section id="bk">
-<section id="chicken">
-    <p>Beef</p>
-</section>
-<p>Beef is the culinary name for meat from cattle, particularly skeletal muscle. Humans have been eating beef since prehistoric times.</p>
-</section>
-<section id="dk">
-<section id="chicken">
-    <p>Sushi</p>
-</section>
-<p>Sushi is a Japanese dish of prepared vinegared rice, usually with some sugar and salt, accompanying a variety of ingredients, such as seafood, often raw, vegetables, and occasionally tropical fruits.</p>
-</section>
-    
+<body>$
+	<h1>OUR MENU</h1>
+	<div class="row">
+	<div class="container col-lg-4 col-md-6 ">
+		<section>
+		<div id="Spanish">
+			chicken
+		</div>
+		<p>
+			The food is all that you need to make your day awesome and make you feel rejuvenised and let me
+			tell you one more thing that our food is greatest of the greatest , you cant doubt our food and if you doubt i think you can never be a awesome guy. we are very meticulous in our work and toil very hard to make each of our recipes special for you and wait we do so because we are LEGEN
+		</p>
+		</section>
+	</div>
+	<div class="container col-lg-4 col-md-6 ">
+		<section>
+		<div id="Indian">
+			beef
+		</div>
+		<p>
+			The food is all that you need to make your day awesome and make you feel rejuvenised and let me
+			tell you one more thing that our food is greatest of the greatest , you cant doubt our food and if you doubt i think you can never be a awesome guy. we are very meticulous in our work and toil very hard to make each of our recipes special for you and wait we do so because we are LEGEN.;) 
+		</p>
+		</section>
+	</div>
+	<div class="container col-lg-4 col-md-12 ">
+		<section>
+		<div id="Japan">
+			sushi
+		</div>
+		<p>
+			The food is all that you need to make your day awesome and make you feel rejuvenised and let me
+			tell you one more thing that our food is greatest of the greatest , you cant doubt our food and if you doubt i think you can never be a awesome guy. we are very meticulous in our work and toil very hard to make each of our recipes special for you and wait we do so because we are LEGEN
+		</p>
+		</section>
+	</div>
+	</div>
+
 </body>
 </html>
