--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>M @ 2</title>
-	<link rel="stylesheet" type="text/css" href="styles 2.css">
+	<link rel="stylesheet" type="text/css" href="https://github.com/Farhan-labib/courseera-course/edit/master/index.css">
 </head>
 <body>$
 	<h1>OUR MENU</h1>
