--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>M @ 2</title>
-	<link rel="stylesheet" type="text/css" href="https://github.com/Farhan-labib/courseera-course/edit/master/index.css">
+	<link rel="stylesheet"  href="https://github.com/Farhan-labib/courseera-course/edit/master/index.css">
 </head>
-<body>$
+<body>
 	<h1>OUR MENU</h1>
 	<div class="row">
 	<div class="container col-lg-4 col-md-6 ">
