--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>M @ 2</title>
+	<title>Farhan</title>
 	<link rel="stylesheet"  href="https://github.com/Farhan-labib/courseera-course/edit/master/index.css">
 </head>
 <body>
