--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <form action='' method='post'>
      
-<a href="https://github.com/Farhan-labib/courseera-course/blob/master/m.html"> <input type="submit"  value="Dipto"> </a><br><br>
+<a href=m.html> <input type="submit"  value="Dipto"> </a><br><br>
 <a><input type="submit" value="Mridula"></a><br><br>
 <a><input type="submit"  value="vishal"></a>
 
