--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
     <form action='' method='post'>
      
-<a href=m.html> <input type="submit"  value="Dipto"> </a><br><br>
-<a><input type="submit" value="Mridula"></a><br><br>
-<a><input type="submit"  value="vishal"></a>
+<a href=m.html> <button>Mridula </a><br><br>
+    <a><button>Dipto</button></a><br><br>
+    <a><button>Vishal</button></a>
 
    </form>
 
