--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <form action='' method='post'>
      
-<a href=https://github.com/Farhan-labib/courseera-course/edit/master/m.html> <button>Mridula </a><br><br>
+<a href="m.htm"> <button>Mridula </a><br><br>
     <a><button>Dipto</button></a><br><br>
     <a><button>Vishal</button></a>
 
